--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
     <header>
         <div class="header-content">
             <!-- Add your profile picture here -->
-            <img src="mani.jpg.jpg" alt="Your Profile Picture" class="profile-picture">
-            <h1h >manikandan</h1>
+            <img src="divya.jpg" alt="Your Profile Picture" class="profile-picture">
+            <h1h >Divyabanu</h1>
             <p>computer application</p>
         </div>
     </header>
@@ -169,14 +169,14 @@
         <div class="section-content">
             <center>
             <h2>Resume</h2>
-            <a href="MANIKANDAN (1).pdf" target="_blank" class="download-button">Download CV</a>
+            <a href="divya.pdf" target="_blank" class="download-button">Download CV</a>
         </center>
         </div>
         
     </section>
 
     <footer>
-        <p>&copy; 2023 manikandan.s</p>
+        <p>&copy; 2023 divyabanu.s</p>
     </footer>
 
     <script>
